header section added

--- a/index.html
+++ b/index.html
@@ -30,11 +30,35 @@
     </style>
 </head>
 <body class="font-manrope">
-    <header>
-
-    </header>
-    <main>
-
+    
+    <main class="max-w-screen-xl mx-auto px-16 lg:px-28">
+        <!-- header section -->
+        <header class="flex pt-10 mb-20">
+            <!-- text content -->
+             <div>
+                <h1 class="text-4xl md:text-5xl font-bold">It's good 
+                <br>tea time at The<br>Tea House</h1>
+                <p class="w-3/4 text-[#777777] mt-8">Tea and Botanical Solutions Supplier Give Optimum Satisfaction To Your Taste Buds.</p>
+                <button class="px-5 py-3 font-bold text-lg rounded-lg text-white bg-gradient-to-l from-[#FF0000] to-[#FF8938] ... mt-8">Explore More  <i class="fa-solid fa-arrow-right -rotate-45 font-bold text-xl"></i></button>
+             </div>
+             <!-- img content -->
+              <div class="relative">
+                <!-- img -->
+                 <div>
+                    <img class="w-full" src="./images/banner.png" alt="">
+                 </div>
+                 <!-- img card -->
+                 <div class="absolute flex items-center px-2 py-2 md:px-10 lg:py-4 rounded-lg shadow-lg bg-white top-28 lg:left-28  md:left-20 md:top-80">
+                    <!-- icon -->
+                     <div><i class="fa-solid fa-star text-yellow-300 text-3xl"></i></div>
+                     <!-- icon text -->
+                      <div class="ml-2">
+                        <p class="lg:text-2xl font-bold ">5.00</p>
+                        <p class="text-[#777777]">Trust Pilot Ratings</p>
+                      </div>
+                 </div>
+              </div>
+        </header>
     </main>
     <footer>
 
