--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     
     <main class="max-w-screen-xl mx-auto px-16 lg:px-28">
         <!-- header section -->
-        <header class="flex pt-10 mb-20">
+        <header class="lg:flex pt-10 mb-20">
             <!-- text content -->
              <div>
                 <h1 class="text-4xl md:text-5xl font-bold">It's good 
@@ -59,6 +59,55 @@
                  </div>
               </div>
         </header>
+
+        <!-- features products -->
+        <section class="py-8 lg:p-24">
+            <!-- title texts -->
+            <div class="text-center mb-8">
+                <h1 class="text-3xl md:text-4xl font-bold mb-5">Our Featured Products</h1>
+                <p class="text-[#777777] max-w-xl mx-auto">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
+            </div>
+
+            <!-- products cards section-->
+             <div class="grid lg:grid-cols-4 md:grid-cols-2 text-center gap-6">
+                <!-- card -->
+                 <div class="bg-gray-100 rounded-lg text-center overflow-hidden">
+                    <img class="mx-auto pt-4" src="./images/tea-1.png" alt="">
+                    <!-- card text -->
+                     <div class="p-4">
+                        <h4 class="font-bold text-xl">Milk Tea</h4>
+                        <p class="text-[#777777]">Creamer could be replaced by fresh milk</p>
+                     </div>
+                 </div>
+                <!-- card -->
+                 <div class="bg-gray-100 rounded-lg text-center overflow-hidden">
+                    <img class="mx-auto pt-4" src="./images/tea-2.png" alt="">
+                    <!-- card text -->
+                     <div class="p-4">
+                        <h4 class="font-bold text-xl">Black Tea</h4>
+                        <p class="text-[#777777]">Creamer could be replaced by fresh milk</p>
+                     </div>
+                 </div>
+                <!-- card -->
+                 <div class="bg-gray-100 rounded-lg text-center overflow-hidden">
+                    <img class="mx-auto pt-4" src="./images/tea-3.png" alt="">
+                    <!-- card text -->
+                     <div class="p-4">
+                        <h4 class="font-bold text-xl">Lemon Tea</h4>
+                        <p class="text-[#777777]">Creamer could be replaced by fresh milk</p>
+                     </div>
+                 </div>
+                <!-- card -->
+                 <div class="bg-gray-100 rounded-lg text-center overflow-hidden">
+                    <img class="mx-auto pt-4" src="./images/tea-4.png" alt="">
+                    <!-- card text -->
+                     <div class="p-4">
+                        <h4 class="font-bold text-xl">Green Tea</h4>
+                        <p class="text-[#777777]">Creamer could be replaced by fresh milk</p>
+                     </div>
+                 </div>
+             </div>
+        </section>
     </main>
     <footer>
 
