--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     
     <main class="max-w-screen-xl mx-auto px-16 lg:px-28">
         <!-- header section -->
-        <header class="lg:flex pt-10 mb-20">
+        <header class="lg:flex pt-10 mb-20 justify-center items-center">
             <!-- text content -->
              <div>
                 <h1 class="text-4xl md:text-5xl font-bold">It's good 
@@ -108,6 +108,96 @@
                  </div>
              </div>
         </section>
+
+        <!-- great tea section -->
+         <section class="mb-28">
+            <div class="grid grid-cols-1 lg:grid-cols-2 justify-center items-center">
+                <!-- img section -->
+                 <div class="grid grid-cols-2 grid-rows-3 gap-4 lg:w-5/6">
+                    <div class="h-36 bg-gradient-to-r from-red-100 to-red-50 rounded-xl"> </div>
+                    <div class="bg-orange-50 rounded-xl row-span-2"> 
+                        <img class="mx-auto my-5" src="./images/fresh-1.png" alt="">
+                    </div>
+                    <div class="bg-gray-50 rounded-xl row-span-2"> 
+                        <img class="mx-auto my-5" src="./images/fresh-2.png" alt="">
+                    </div>
+                    <div class="h-36 bg-gradient-to-r from-gray-100 to-gray-50 rounded-xl"> </div>
+                 </div>
+                 <!-- texts -->
+                  <div class="mt-2">
+                    <h1 class="text-5xl font-bold mb-5">Great Tea, Freshly Presented</h1>
+                    <p class="text-[#777777]">The meaning of gong cha is chanese is to provide the best tea to emperor from all possessions . It represents the highest quality and self expectation. Establishing in 2006, Gong cha had been deeply appreciated by its custoers  because of good words of mouth and unique customized service orginated from Taiwan.</p>
+                    <br>
+                    <h4 class="text-2xl font-bold mb-5">Unique Taste</h4>
+                    <p class="text-[#777777]">A Unique and different style from other teapots gives a luxurious and minimalist impression</p>
+                    <br>
+                    <h4 class="text-2xl font-bold mb-5">Premium Quality</h4>
+                    <p class="text-[#777777]">Premium Quality that makes tea more elegant and more durable when you use it.</p>
+                  </div>
+            </div>
+
+         </section>
+
+         <!-- review section -->
+          <section class="mb-28">
+            <div class="bg-gradient-to-r from-orange-500 to-red-500 rounded-xl grid grid-cols-1 lg:grid-cols-2 text-white px-7 md:px-14 ">
+                <!-- text section -->
+                <div class="flex justify-center items-center">
+                    <div class="w-5/6">
+                        <h1 class="text-5xl font-bold mb-5 mt-10">Meet Our Super Clients</h1>
+                        <p class="mb-5">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
+                        <button class="text-red-500 bg-white font-bold px-3 py-3 rounded-lg">Show All</button>
+                     </div>
+                </div>
+                 <!-- reviews card  -->
+                  <div class="relative py-24">
+                     <!-- middle card -->
+                     <div class="absolute z-10 top-44 md:top-52">
+                        <div class="h-56 bg-white text-black rounded-lg w-full md:w-3/4 flex items-center px-5  left-8 md:left-32 ">
+                            <div class="absolute -top-5 -left-5 bg-white rounded-full">
+                                <img class="p-1" src="./images/client.png" alt="">
+                            </div>
+                            <div >
+                                <p class="text-[#777777] mb-5">
+                                    We are providing the best and suitable home insurance services for the people who are interested to treatment
+                                </p>
+                                <h4 class="font-bold">Ilham Yuda</h4>
+                                <p class="text-[#777777] font-bold">Businessman</p>
+                            </div>
+                         </div>
+                      </div>
+
+                    <!-- top card -->
+                     <div class="relative h-56 bg-white text-black rounded-lg w-full md:w-3/4 flex items-center opacity-40 px-5 left-8 md:left-32">
+                        <div class="absolute -top-5 -left-5 bg-white rounded-full">
+                            <img class="p-1" src="./images/client.png" alt="">
+                        </div>
+                        <div >
+                            <p class="text-[#777777] mb-5">
+                                We are providing the best and suitable home insurance services for the people who are interested to treatment
+                            </p>
+                            <h4 class="font-bold">Ilham Yuda</h4>
+                            <p class="text-[#777777] font-bold">Businessman</p>
+                        </div>
+                     </div>
+                    
+                     <!-- bottom card -->
+                     <div class="relative h-56 bg-white text-black rounded-lg w-full md:w-3/4 flex items-center px-5 mt-8 opacity-40 left-8 md:left-32">
+                        <div class="absolute -top-5 -left-5 bg-white rounded-full">
+                            <img class="p-1" src="./images/client.png" alt="">
+                        </div>
+                        <div >
+                            <p class="text-[#777777] mb-5">
+                                We are providing the best and suitable home insurance services for the people who are interested to treatment
+                            </p>
+                            <h4 class="font-bold">Ilham Yuda</h4>
+                            <p class="text-[#777777] font-bold">Businessman</p>
+                        </div>
+                     </div>
+                  </div>
+            </div>
+
+          </section>
     </main>
     <footer>
 
