--- a/index.html
+++ b/index.html
@@ -198,9 +198,73 @@
             </div>
 
           </section>
+          <!-- news section -->
     </main>
-    <footer>
-
+    <footer class="bg-red-100 text-[#777777] py-10 px-4 md:px-16">
+        <div class="w-9/12 mx-auto">
+            <!-- logo -->
+             <div class="mb-8 flex justify-between">
+                <img class="mb-8" src="./images/cup.png" alt="">
+                <div class="flex items-center justify-center gap-2">
+                    <h4>Ready to get strated?</h4>
+                    <button class="px-5 py-3 font-bold text-lg rounded-lg text-white bg-gradient-to-l from-[#FF0000] to-[#FF8938] ... mt-8">
+                    Get Started</button>
+                </div>
+             </div>
+             <!-- links -->
+              <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-4">
+                <!-- first col -->
+                <div class="">
+                    <h3 class="font-semibold text-lg mb-3 lg:text-xl">Quick Link</h3>
+                    <ul class="space-y-2">
+                        <li><a class="hover:text-orange-200" href="">Home</a></li>
+                        <li><a class="hover:text-orange-200" href="">Insurance</a></li>
+                        <li><a class="hover:text-orange-200" href="">About</a></li>
+                        <li><a class="hover:text-orange-200" href="">Privacy Policy</a></li>
+                    </ul>
+                </div>
+                <!-- second col -->
+                <div class="">
+                    <h3 class="font-semibold text-lg mb-3 lg:text-xl">Our Service</h3>
+                    <ul class="space-y-2">
+                        <li><a class="hover:text-orange-200" href="">Life Insurance</a></li>
+                        <li><a class="hover:text-orange-200" href="">Car Insurance</a></li>
+                        <li><a class="hover:text-orange-200" href="">Health Insurance</a></li>
+                        <li><a class="hover:text-orange-200" href="">House Insurance</a></li>
+                    </ul>
+                </div>
+                <!-- third col -->
+                <div class="">
+                    <h3 class="font-semibold text-lg mb-3 lg:text-xl">Help</h3>
+                    <ul class="space-y-2">
+                        <li><a class="hover:text-orange-200" href="">FAQs</a></li>
+                        <li><a class="hover:text-orange-200" href="">Contact Us</a></li>
+                
+                    </ul>
+                </div>
+                <!-- fourth col -->
+                 <div>
+                    <h1 class="font-semibold text-lg mb-3 lg:text-xl">Subscribe to our newsletter</h1>
+                    <div class="flex flex-col space-y-2">
+                        <div>
+                            <input type="email" placeholder="Email address" class="border-b-2 border-black bg-transparent w-4/6">
+                            <i class="fa-solid fa-chevron-right w-7 h-7 bg-red-500 inline-flex rounded-full text-white justify-center items-center"></i>
+                            <div class="flex justify-center mb-2 mt-8 w-2/5 justify-between">
+                                <i class="fa-brands fa-facebook"></i>
+                                <i class="fa-brands fa-square-instagram"></i>
+                                <i class="fa-brands fa-square-x-twitter"></i>
+                            </div>
+                        </div>
+                    </div>
+                 </div>
+               
+              </div>
+              <div class="text-center pt-4 mt-4">
+                <p class="text-sm text-[#777777]">
+                    © 2027 UIDesign.to - All rights reserved.
+                </p>
+             </div>
+        </div>
     </footer>
 </body>
 </html>
