news section added

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         </header>
 
         <!-- features products -->
-        <section class="py-8 lg:p-24">
+        <section class="py-8 lg:p-24 mb-20">
             <!-- title texts -->
             <div class="text-center mb-8">
                 <h1 class="text-3xl md:text-4xl font-bold mb-5">Our Featured Products</h1>
@@ -110,7 +110,7 @@
         </section>
 
         <!-- great tea section -->
-         <section class="mb-28">
+         <section class="mb-20">
             <div class="grid grid-cols-1 lg:grid-cols-2 justify-center items-center">
                 <!-- img section -->
                  <div class="grid grid-cols-2 grid-rows-3 gap-4 lg:w-5/6">
@@ -139,7 +139,7 @@
          </section>
 
          <!-- review section -->
-          <section class="mb-28">
+          <section class="mb-20">
             <div class="bg-gradient-to-r from-orange-500 to-red-500 rounded-xl grid grid-cols-1 lg:grid-cols-2 text-white px-7 md:px-14 ">
                 <!-- text section -->
                 <div class="flex justify-center items-center">
@@ -199,15 +199,53 @@
 
           </section>
           <!-- news section -->
+           <section class="mb-20">
+                <!-- text content -->
+                 <div class="text-center">
+                    <h1 class="text-3xl md:text-4xl font-bold mb-5">News & Events</h1>
+                    <p class="text-[#777777] max-w-xl mx-auto">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
+                 </div>
+                 <!-- news cards -->
+                  <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 mt-7 gap-5">
+
+                    <!-- col 1 -->
+                     <div class="p-5 rounded-lg border-[#D2D2D2] border space-y-2">
+                        <img  class="mb-3" src="./images/news-1.png" alt="">
+                        <small class="text-[#777777]">Feb 05, 2027</small>
+                        <h3 class="font-semibold">Collecting 8 points for discount</h3>
+                        <small class="text-[#777777]">There are many variations of passages of Lorem Ipsum available.</small>
+                        <h3 class="font-semibold">Learn More</h3>
+                     </div>
+                    <!-- col 1 -->
+                     <div class="p-5 rounded-lg border-[#D2D2D2] border space-y-2">
+                        <img  class="mb-3" src="./images/news-2.png" alt="">
+                        <small class="text-[#777777]">Feb 05, 2027</small>
+                        <h3 class="font-semibold">Collecting 8 points for discount</h3>
+                        <small class="text-[#777777]">There are many variations of passages of Lorem Ipsum available.</small>
+                        <h3 class="font-semibold">Learn More</h3>
+                     </div>
+                    <!-- col 1 -->
+                     <div class="p-5 rounded-lg border-[#D2D2D2] border space-y-2">
+                        <img  class="mb-3" src="./images/news-3.png" alt="">
+                        <small class="text-[#777777]">Feb 05, 2027</small>
+                        <h3 class="font-semibold">Collecting 8 points for discount</h3>
+                        <small class="text-[#777777]">There are many variations of passages of Lorem Ipsum available.</small>
+                        <h3 class="font-semibold">Learn More</h3>
+                     </div>
+                   
+
+                  </div>
+           </section>
     </main>
+
     <footer class="bg-red-100 text-[#777777] py-10 px-4 md:px-16">
         <div class="w-9/12 mx-auto">
             <!-- logo -->
              <div class="mb-8 flex justify-between">
                 <img class="mb-8" src="./images/cup.png" alt="">
-                <div class="flex items-center justify-center gap-2">
+                <div class="flex items-center gap-2">
                     <h4>Ready to get strated?</h4>
-                    <button class="px-5 py-3 font-bold text-lg rounded-lg text-white bg-gradient-to-l from-[#FF0000] to-[#FF8938] ... mt-8">
+                    <button class="px-5 py-3 font-bold text-lg rounded-lg text-white bg-gradient-to-l from-[#FF0000] to-[#FF8938] ...">
                     Get Started</button>
                 </div>
              </div>
